Init vueJS front part instead of next JS (because I want to use fastify as backend experience)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
     
     "eslint.workingDirectories": [
         "frontend"
-    ]
+    ],
+"vetur.validation.template": false,
+"vetur.validation.script": false,
+"vetur.validation.style": false,
 }
