--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,6 @@
 {
-    
     "eslint.workingDirectories": [
         "frontend"
     ],
-"vetur.validation.template": false,
-"vetur.validation.script": false,
-"vetur.validation.style": false,
+    "typescript.tsdk": "node_modules/typescript/lib",
 }
