--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,4 +1,14 @@
 {
-  "extends": "next/core-web-vitals"
-  
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "import/no-anonymous-default-export": ["error", {
+      "allowArray": true,
+      "allowArrowFunction": true,
+      "allowAnonymousClass": true,
+      "allowAnonymousFunction": true,
+      "allowCallExpression": true, // The true value here is for backward compatibility
+      "allowLiteral": true,
+      "allowObject": true
+    }]
+  }
 }
